# my_resume_site

./: .gitignore
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  data.py  main.py  schemas.py
backend/app/api/: contact.py  github.py  me.py  skills.py
frontend/: .env.production  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ApiExplorer.tsx  CodePlayground.tsx  Contact.tsx  Hero.tsx  SkillsGrid.tsx  Terminal.tsx  icons.tsx
frontend/src/data/: i18n.ts  skills.ts  snippets.ts  terminal.tsx
frontend/src/hooks/: useLang.ts  useTheme.ts  useTyping.ts
frontend/src/lib/: formatJson.ts  highlight.ts
frontend/src/styles/: globals.css
